--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,23 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "esnext",
+    "module": "commonjs",
     "lib": ["esnext", "dom"],
     "strict": true,
     "experimentalDecorators": true,
     "sourceMap": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true,
     "esModuleInterop": true,
     "noFallthroughCasesInSwitch": true,
-    "noUnusedParameters": true,
+    // "noUnusedParameters": true,
     "noEmit": true,
     "skipLibCheck": true,
     "rootDir": "src",
     "baseUrl": ".",
+    "allowJs": true,
+    "outDir": "./lib"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
