feat: add eslint

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "well typed state machine library",
   "main": "index.js",
   "scripts": {
-    "test": "npx ts-node --project ./tsconfig.json ./src/state-machine.ts"
+    "test": "npx ts-node --project ./tsconfig.json ./src/state-machine.ts",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --fix"
   },
   "keywords": [
     "state-machine"
@@ -12,7 +13,15 @@
   "author": "Orenbek",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
     "ts-node": "^10.1.0",
-    "typescript": "^4.4.0-beta"
+    "typescript": "^4.4.4"
   }
 }
