--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "target": "es2015",
+    "module": "ES2015",
     "lib": ["esnext", "dom"],
     "strict": true,
     "experimentalDecorators": true,
     "sourceMap": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
-    // "noUnusedLocals": true,
+    "noUnusedLocals": true,
     "esModuleInterop": true,
     "noFallthroughCasesInSwitch": true,
-    // "noUnusedParameters": true,
+    "noUnusedParameters": true,
     "noEmit": true,
     "skipLibCheck": true,
     "rootDir": "src",
