--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,11 @@
     "outDir": "./lib"
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "transpileOnly": true,
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  }
 }
