--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "well typed state machine library",
   "main": "index.js",
   "scripts": {
-    "test": "npx ts-node --project ./tsconfig.json ./src/state-machine.ts",
-    "lint": "eslint '*/**/*.{js,ts}' --fix",
+    "test": "jest",
+    "tsnode": "npx ts-node --project ./tsconfig.json ./src/state-machine.ts",
+    "lint": "eslint 'src/**/*.{js,ts}' --fix",
     "preinstall": "npx only-allow pnpm"
   },
   "keywords": [
@@ -14,14 +15,21 @@
   "author": "Orenbek",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "babel-jest": "^27.3.1",
     "eslint": "^8.1.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
+    "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "ts-node": "^10.1.0",
