--- a/package.json
+++ b/package.json
@@ -1,21 +1,37 @@
 {
-  "name": "typescript-state-machine",
+  "name": "ts-state-machine",
   "version": "1.0.0",
   "description": "well typed and tested state machine library",
-  "main": "lib/state-machine.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "typings": "types/index.d.ts",
+  "files": [
+    "es",
+    "lib",
+    "umd",
+    "modern",
+    "types"
+  ],
+  "sideEffects": false,
   "scripts": {
     "test": "jest",
     "tsnode": "npx ts-node --project ./tsconfig.json ./src/state-machine.ts",
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
-    "preinstall": "npx only-allow pnpm"
+    "build": "npm run pre-build && rollup -c && tsc --project tsconfig.production.json",
+    "preinstall": "npx only-allow pnpm",
+    "pre-build": "rm -rf umd lib es modern types",
+    "release": "standard-version"
   },
   "keywords": [
+    "ts-state-machine",
+    "typescript-state-machine",
     "state-machine",
+    "finite-state-machine",
     "typescript",
-    "finite-state-machine"
+    "strongly-typed"
   ],
   "author": "Orenbek",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/Orenbek/typescript-state-machine.git"
@@ -23,8 +39,12 @@
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@babel/runtime": "^7.16.3",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
@@ -38,7 +58,10 @@
     "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
+    "rollup": "^2.60.1",
+    "standard-version": "^9.3.2",
     "ts-node": "^10.1.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.4"
   },
   "husky": {
