--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es2015",
-    "module": "ES2015",
-    "lib": ["esnext", "dom"],
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["esnext", "ES2015", "dom"],
     "strict": true,
     "experimentalDecorators": true,
-    "sourceMap": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
-    "esModuleInterop": true,
-    "noFallthroughCasesInSwitch": true,
+    // "esModuleInterop": true,
+    // "noFallthroughCasesInSwitch": true,
     "noUnusedParameters": true,
-    "noEmit": true,
     "skipLibCheck": true,
     "rootDir": "src",
     "baseUrl": ".",
-    "allowJs": true,
-    "outDir": "./lib"
+    "allowJs": true
   },
   "include": ["src"],
   "exclude": ["node_modules"],
